--- a/client/style.css
+++ b/client/style.css
@@ -14,7 +14,7 @@
 body {
   min-height: 100vh;
   background-image: var(--body-bg);
-  font-family: Helvetica, sans-serif;
+  font-family: sans-serif;
 }
 
 .chat-wrapper {
@@ -155,6 +155,7 @@ body {
   height: 13px;
   border-radius: 50%;
   background-color: rgb(12, 189, 12);
+  display: inline-block;
 }
 
 .container {
